# UoS-ros-setup

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  ros-vnc.conf  ros.mk  start-vnc-session.sh  xstartup
.devcontainer/: Dockerfile  Dockerfile.arm64  Makefile  README.md  devcontainer.env  devcontainer.json  docker-compose.arm64.yaml  docker-compose.mac.yaml  docker-compose.win.yaml  docker-compose.wsl.yaml  docker-compose.yaml  ros-vnc.conf
catkin_ws/: Makefile
catkin_ws/solutions/lab3/: CMakeLists.txt  lab3-rvis-conf.rviz  lab3_data.bag  package.xml
catkin_ws/solutions/lab3/launch/: ex1.launch  ex2_gps.launch  ex2_imu.launch  ex2_odom.launch  ex3.launch
catkin_ws/src/hw/: CMakeLists.txt  package.xml
catkin_ws/src/hw/launch/: turtles.launch
catkin_ws/src/hw/scripts/: heart_turtle.py  invert_turtle.py  teleport_turtle.py
catkin_ws/src/lab2/: CMakeLists.txt  package.xml
catkin_ws/src/lab2/scripts/: pose_listener.py  pose_rviz.py
catkin_ws/src/lab2/src/: pose_listener.cpp  pose_publisher.cpp
catkin_ws/src/lab3/: package.xml
catkin_ws/src/lab3/launch/: ex1.launch  ex2_gps.launch  ex2_imu.launch  ex2_odom.launch  ex3.launch
